# Data_Engineering_Task

./: README.md
Dataset/: StandardDB  StandardDB.txt
Step 1 - Data_quality_check/: Dataset_EDA.ipynb
Step 1- Data_Assessment/: Dataset_EDA.ipynb  GreatExpectations.txt
Step2-DataPipelining/medicaldatapipeline/: README.md  pyproject.toml  session_store.db
Step2-DataPipelining/medicaldatapipeline/docs/source/: conf.py  (+1 more)
Step2-DataPipelining/medicaldatapipeline/notebooks/: Kedro_dataloading.ipynb
Step2-DataPipelining/medicaldatapipeline/tests/: test_run.py
Step2_DataPipeline/datapipeline/: README.md  pyproject.toml  session_store.db
Step2_DataPipeline/datapipeline/conf/base/: catalog.yml  parameters.yml
Step2_DataPipeline/datapipeline/notebooks/: Data Analysis.ipynb  Untitled.ipynb
Step2_DataPipeline/datapipeline/src/datapipeline/: __init__.py  __main__.py  pipeline_registry.py  settings.py
Step2_DataPipeline/datapipeline/src/datapipeline/data_cleaning/: data_cleaning_functions.py
Step2_DataPipeline/datapipeline/src/datapipeline/pipelines/: nodes.py  pipeline.py
exit/: dbt_project.yml
my_tuva_project/: dbt_project.yml  folder_structure.txt
my_tuva_project/models/: encounters.sql  medications.sql  patients.sql  sources.yml  symptoms.sql
step2-pipeline/: README.md  pyproject.toml  session_store.db
step2-pipeline/conf/base/: catalog.yml
step2-pipeline/docs/source/: conf.py  index.rst
step2-pipeline/notebooks/: Kedro_dataloading.ipynb
step2-pipeline/src/step2_pipeline/: __init__.py  __main__.py  settings.py
step2-pipeline/tests/: test_run.py
(+8 files in other folders)
